Fix Arcane logo on Safari

--- a/src/components/ArcaneLogo/index.module.scss
+++ b/src/components/ArcaneLogo/index.module.scss
@@ -16,6 +16,7 @@
   }
 
   @media (max-width: $mobile-width) {
+    width: 141px;
     height: 24px;
   }
 }
